# InteractiveSpatialSIR

./: .gitignore  .nitpick.toml  .pre-commit-config.yaml  CMakeLists.txt  README.md  package-lock.json  package.json
simulator/: Box.cpp  Box.h  CMakeLists.txt  Clients.cpp  Clients.h  Person.h  Server.cpp  Server.h  Simulator.cpp  Simulator.h  SimulatorThread.cpp  SimulatorThread.h  gui.cpp  main.cpp  run.cpp
src/: App.css  App.js
